# zobs

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/zobs/: selector.py  sync.py
tests/: test_selector.py  test_sync.py
