[project]
name = "zobs"
version = "0.1.0"
description = "Sync Zotero collections and Obsidian notes into a research project"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "pyzotero>=1.10",
    "pyyaml>=6.0",
]

[project.scripts]
get-papers = "zobs.sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zobs"]
